# citrine

./: .gitignore  Cargo.toml  README.md  fix_syntax_kind.sh  flake.nix
examples/: simple.rs
src/: builtins.rs  lib.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
src/reader/: mod.rs  tests.rs  value.rs
src/syntax/: mod.rs
tests/: integration_tests.rs  lexer_tests.rs  parser_tests.rs  reader_tests.rs
